# mensactrl

./: Makefile.am  configure.ac
bsp/: .gitignore
bsp/configs/: ptxconfig
bsp/configs/platform-olinuxino-imx233/: kernelconfig  platformconfig
bsp/configs/platform-olinuxino-imx233/config/images/: sd.config
bsp/configs/platform-olinuxino-imx233/dts/: imx23-olinuxino.dts
bsp/configs/platform-olinuxino-imx233/patches/linux-3.16-rc6/: series
bsp/configs/platform-olinuxino-imx233/patches/linux-3.17.1/: 0001-Reduce-x-y-minres-form-120-to-1.patch
bsp/configs/platform-olinuxino-imx233/rules/: u-boot.make
bsp/local_src/: mensa-control
bsp/projectroot/home/.ssh/: authorized_keys
bsp/projectroot/lib/systemd/system/: mensadisplay.service
bsp/rules/: mensa-control.in  mensa-control.make  ssh-keys.in  ssh-keys.make
fastclient/: Makefile  client.c  flash.c  snow.c  spectrum.c
python/: .reddit.py.swp  31c3.py  bitmapfont.py  brightness_test.py  cat.py  clearscreen.py  client.py  clock.py  cornerclock.py  dodecahedra.py  fire.py  font_client.py  gol-client.py  irc.py  munching.py  random_pixel.py  reddit.py  shirts.py  speedtest.py  stratum0.py  stratum0_mfh16.py  test-client.py  test-proxy.py  test-server.py  text.txt
sidescroll/: Makefile  sidescroll.c++
src/: Makefile.am  common.h  mensactrl.c  mensaserv.c
