bin_PROGRAMS = \
	mensa-control

AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_builddir)/include
#	$(some_CFLAGS)

EXTRA_DIST = \
	autogen.sh

MAINTAINERCLEANFILES = \
	configure \
	aclocal.m4 \
	Makefile.in

#
# binary
#
mensa_control_SOURCES = \
	mensa-control.c

#mensa_control_LDADD = \
#	$(some_LIBS)

